Monday Morning commit # 2-- ipython viewer version to lead others through

--- a/rfecvNanoExample1.ipynb
+++ b/rfecvNanoExample1.ipynb
@@ -323,13 +323,13 @@
    },
    "outputs": [],
    "source": [
-    "trainingData = data\n",
-    "trainingDataMatrix = trainingData.as_matrix() # all numbers, no headers\n",
-    "targetDataRPShapeMatrix = targetDataRPShape\n",
-    "targetDataRFMatrix =  targetDataRF.as_matrix() # all numbers, no headers\n",
+    "trainData = data\n",
+    "trainDataMatrix = trainData.as_matrix() # all numbers, no headers\n",
+    "tarDataRPShapeMatrix = tarDataRPShape\n",
+    "tarDataRFMatrix =  targetDataRF.as_matrix() # all numbers, no headers\n",
     "\n",
     "# Get a list of the trainingData features remaining. This is used later for plotting etc.\n",
-    "trainingDataNames =  list(trainingData)\n"
+    "trainingDataNames =  list(trainData)\n"
    ]
   },
   {
@@ -359,9 +359,9 @@
     "                                                  maxFeatures=None,\n",
     "                                                  maxDepth=4,\n",
     "                                                  nFolds=5,\n",
-    "                                                  targetDataMatrix = targetDataRPShapeMatrix,\n",
-    "                                                  trainingData = trainingData,\n",
-    "                                                  trainingDataMatrix = trainingDataMatrix,\n",
+    "                                                  targetDataMatrix = tarDataRPShapeMatrix,\n",
+    "                                                  trainingData = trainData,\n",
+    "                                                  trainingDataMatrix = trainDataMatrix,\n",
     "                                                  SEED = 5)"
    ]
   },
